# heo2

./: .gitattributes  .gitignore  LICENSE  hacs.json  pyproject.toml
custom_components/heo2/: __init__.py  agilepredict_client.py  appliance_timing.py  binary_sensor.py  bottlecapdave_client.py  config_flow.py  (+29 more)
docs/: HEO_III_DESIGN.md  HEO_III_PLANNER_DESIGN.md  SPEC.md  bugs.md  inverter-2-solar-assistant.md  rule_field_overlap.md
scripts/: README.md  deploy-to-ha.ps1  deploy.sh  rollback-ha.ps1  rollback.sh
tests/: conftest.py  heo3_fixtures.py  test_agilepredict_client.py  test_appliance_timing.py  test_bottlecapdave_client.py  test_config_flow_dashboard.py  test_coordinator_helpers.py  test_cost_tracker.py  test_cycle_tracker.py  test_dashboard_sensors.py  test_direct_mqtt_transport.py  test_ev_state.py  test_heo3_agilepredict_client.py  test_heo3_apply.py  test_heo3_apply_peripheral.py  test_heo3_build.py  test_heo3_compute.py  test_heo3_coordinator.py  test_heo3_discovery.py  test_heo3_ha_wrappers.py  test_heo3_inverter_reads.py  test_heo3_inverter_reads_deye.py  test_heo3_inverter_validate.py  test_heo3_inverter_verify.py  test_heo3_inverter_writes.py  test_heo3_mock_transport.py  test_heo3_performance_tracker.py  test_heo3_peripheral.py  test_heo3_planner_framework.py  test_heo3_planner_rules.py  test_heo3_planner_tuner_digest.py  test_heo3_service_caller.py  test_heo3_skeleton.py  test_heo3_snapshot.py  test_heo3_state_reader.py  test_heo3_transport_paho.py  test_heo3_world_flags.py  test_heo3_world_forecasts.py  test_heo3_world_rates.py  test_igo_rates.py  (+18 more)
(+76 files in other folders)
