[project]
name = "heo2"
version = "0.1.0"
description = "HEO II: Rule-based SunSynk 6-slot timer programmer"
requires-python = ">=3.12"
dependencies = [
    "paho-mqtt>=2.0",
    "httpx>=0.27",
    "tzdata>=2024.1; sys_platform == 'win32'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-httpx>=0.34",
    "tzdata>=2024.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["custom_components"]
